--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
         <!-- JAVASCRIPT FILES -->
         <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
         <script>
-            emailjs.init("user_c4WedNTfOR4VNhAL-"); // Замените "user_c4WedNTfOR4VNhAL-" на ваш реальный public key из Email.js
+            emailjs.init("c4WedNTfOR4VNhAL-"); // Замените "user_c4WedNTfOR4VNhAL-" на ваш реальный public key из Email.js
 
             function sendEmail() {
                 emailjs.send("service_b89dzxc", "template_fho83wd", {
