--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                   </div>
                 </div>
               </form>
-                            
+                <div class="col-lg-6 col-md-6 col-sm-12">       
               <form action="#" class="form form2">
                 <div class="form__item">
                   <h2 class="heading">Ваш заказ</h2>
@@ -267,6 +267,7 @@
                   <output class="total" id="total">0</output>
                 </div>
               </form>
+                </div>
             </div>
             <script src="js/calculator.js"></script>
                             </div>
