--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="col-lg-12 col-12">
                             <h2 class="mb-4">Калькулятор</h2>
                         </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-lg-6 col-sm-12">
                       <form action="#" class="form form1">
                         <div class="form__item">
                   <h2 class="heading">Выберите свой тариф</h2>
@@ -245,7 +245,7 @@
                   </div>
                 </div>
               </form>
-                <div class="col-lg-6 col-md-6 col-sm-12">       
+                <div class="col-lg-6 col-sm-12">      
               <form action="#" class="form form2">
                 <div class="form__item">
                   <h2 class="heading">Ваш заказ</h2>
